# libmpv_dart

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  player_page.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: mpv_dart.podspec
ios/Classes/: mpv_dart.c
lib/: libmpv.dart  library.dart  other.dart  player.dart
lib/video/: audio_params.dart  params.dart  video_params.dart
libmpv/: pubspec.yaml
libmpv/lib/: libmpv.dart  library.dart  player.dart
linux/: CMakeLists.txt
macos/: libmpv_dart.podspec  mpv_dart.podspec
macos/Classes/: mpv_dart.c
src/: CMakeLists.txt
windows/: CMakeLists.txt  angle_surface_manager.cpp  libmpv_dart_plugin.cpp  libmpv_dart_plugin_c_api.cpp  video_output.cpp  video_output_manager.cpp
windows/include/libmpv_dart/: angle_surface_manager.h  libmpv_dart_plugin.h  libmpv_dart_plugin_c_api.h  thread_pool.h  video_output.h  video_output_manager.h
windows/test/: libmpv_dart_plugin_test.cpp
(+3 files in other folders)
